Manipular elementos HTML con JS

--- a/DOM.html
+++ b/DOM.html
@@ -41,6 +41,7 @@
                 placeholder="Tu Nombre"
                 id="nombre"
                 class="nombre"
+                value="hola, escribe aquí tu nombre"
             >
 
             <input 
