Eventos del DOM - Inputs

--- a/DOM.html
+++ b/DOM.html
@@ -41,7 +41,7 @@
                 placeholder="Tu Nombre"
                 id="nombre"
                 class="nombre"
-                value="hola, escribe aquí tu nombre"
+                value=""
             >
 
             <input 
@@ -59,6 +59,6 @@
       
     </div>
 
-    <script src="js/24.js"></script>
+    <script src="js/25.js"></script>
 </body>
 </html>
