--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
             <a href="https://twitter.com/codigoconjuan">@codigoconjuan</a>
         </p>
     </header>
+
+    <script src="js/28.js" type="module"></script> 
+    <!-- Agregar type="module" para que se puedan cargar los imports y exports -->
 </body>
 </html>
